k8s/deployment/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tracking-system
spec:
  replicas: 2
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: tracking-system
  minReadySeconds: 30
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: tracking-system
    spec:
      containers:
        - image: ghcr.io/devner-bug/tracking-system-backend-ghcr:latest
          name: tracking-system
          ports:
            - containerPort: 8081
          imagePullPolicy: Always
          resources:
            requests:
              memory: 1Gi
              cpu: 100m
            limits:
              memory: 2Gi
              cpu: 100m
      imagePullSecrets:
        - name: dockerconfigjson-devner-github-com

---
apiVersion: v1
kind: Service
metadata:
  name: tracking-system
spec:
  ports:
    - port: 8081
      protocol: TCP
      targetPort: 8081
  selector:
    app: tracking-system
